# garlic-gui

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  STRUCTURE.md  resources.qrc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/cmake-build/: action.yml
.github/actions/cmake-install/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/package-linux/: action.yml
.github/actions/package-macos/: action.yml
.github/actions/package-windows/: action.yml
.github/actions/publish-release/: action.yml
.github/actions/setup-qt/: action.yml
.github/actions/upload-artifacts/: action.yml
.github/workflows/: artifacts.yml  build.yml  garlic.yml  main.yml  nightly.yml  pull-request.yml  release.yml
cmake/: Info.plist.in
icon/: garlic.icns
scripts/: sync_garlic.py
scripts/windows/: installer.iss
src/: main.cpp
src/garlic/: garlic.c  garlic_wrapper.c  garlic_wrapper.h
src/garlic/apk/: apk.c  apk.h  apk_manifest.c  apk_manifest.h
src/garlic/common/: debug.h  endian_x.h  file_tools.h  output_tools.h  str_tools.h  types.h
src/garlic/dalvik/: dex_annotation.c  dex_annotation.h  dex_class.c  dex_class.h  dex_decompile.c  dex_decompile.h  dex_descriptor.c  dex_descriptor.h  dex_dump.c  dex_dump.h  dex_exception.c  dex_exception.h  dex_expression_builder.c  dex_expression_builder.h  dex_ins.c  dex_ins.h  dex_ins_action.c  dex_ins_action.h  dex_ins_helper.h  dex_lambda.c  dex_lambda.h  dex_meta_helper.h  dex_method.c  dex_method.h  dex_optimizer.c  dex_optimizer.h  dex_pre_optimizer.c  dex_pre_optimizer.h  dex_simulator.c  dex_simulator.h  dex_smali.c  dex_smali.h  dex_structure.h  dex_type_analyse.c  dex_type_analyse.h  dex_writter.c
src/garlic/decompiler/: control_flow.c  control_flow.h  debug_pointer.h  descriptor.c  descriptor.h  dominator_tree.c  dominator_tree.h  exception.c  exception.h  expression.c  expression.h  expression_analyse.c  expression_analyse.h  expression_array.c  expression_array.h  expression_assert.c  expression_assert.h  expression_assign.c  expression_assign.h  expression_branches.c  expression_branches.h  expression_chain.c  expression_chain.h  expression_copy_propgation.c  expression_copy_propgation.h  expression_enum.c  expression_enum.h  expression_exception.c  expression_exception.h  expression_goto.c  expression_goto.h  expression_helper.h  expression_if.c  expression_if.h  expression_inline.c  expression_inline.h  expression_inner_class.h  expression_local_variable.c  expression_local_variable.h  expression_logical.c  (+37 more)
src/garlic/decompiler/transformer/: anonymous.c  assignment_chain.c  cast.c  const.c  declaration.c  enum.c  iinc.c  initialize.c  invoke.c  invokedynamic.c  invokeinterface.c  invokespecial.c  invokestatic.c  invokevirtual.c  lambda.c  local_variable.c  loop.c  new_array.c  operator.c  put_static.c  return.c  single_operator.c  store.c  str_concat.c  transformer.c  transformer.h
src/garlic/jar/: jar.c  jar.h
src/garlic/jvm/: jvm_annotation.c  jvm_annotation.h  jvm_class.c  jvm_class.h  jvm_decompile.c  jvm_decompile.h  jvm_descriptor.c  jvm_descriptor.h  jvm_exception.c  jvm_exception.h  jvm_expression_builder.c  jvm_expression_builder.h  jvm_ins.c  jvm_ins.h  jvm_ins_action.c  jvm_ins_helper.h  jvm_lambda.c  jvm_lambda.h  jvm_method.c  jvm_method.h  jvm_optimizer.c  jvm_optimizer.h  jvm_simulator.c  jvm_simulator.h  jvm_type_analyse.c  jvm_type_analyse.h
src/garlic/libs/bitset/: bitset.c  bitset.h  portability.h
src/garlic/libs/hashmap/: hashmap.c  hashmap.h  hashmap_tools.c  hashmap_tools.h
src/garlic/libs/list/: list.c  list.h
src/garlic/libs/memory/: mem_common.h  mem_pool.c  mem_pool.h
src/garlic/libs/queue/: queue.c  queue.h
src/garlic/libs/str/: str.c  str.h
src/garlic/libs/threadpool/: threadpool.c  threadpool.h
src/garlic/libs/trie/: trie_tree.c  trie_tree.h
src/garlic/libs/zip/: miniz.h  zip.c  zip.h
src/garlic/parser/class/: class_structure.h  class_tools.c  class_tools.h  metadata.c  metadata.h  opcode.c  writter.c
src/garlic/parser/dex/: dex.h  dex_tools.h  metadata.c  metadata.h  opcode.c
src/garlic/parser/pe/: metadata.c  metadata.h  pe.h  pe_const.h  pe_tools.h
src/garlic/parser/reader/: reader.h
src/gui/: CodeEditorWidget.cpp  CodeEditorWidget.h  DecompilerInterface.cpp  DecompilerInterface.h  DecompilerProgressDialog.cpp  DecompilerProgressDialog.h  FileTreeWidget.cpp  FileTreeWidget.h  FindReplaceWidget.cpp  FindReplaceWidget.h  MainWindow.cpp  MainWindow.h  ProjectManager.cpp  ProjectManager.h  SplashWidget.cpp  SplashWidget.h  ThemeManager.cpp  ThemeManager.h  TitleBarWidget.cpp  TitleBarWidget.h  WelcomeWidget.cpp  WelcomeWidget.h  theme.qss
